--- a/sites/all/themes/herne_hill/sass/components/_admin.sass
+++ b/sites/all/themes/herne_hill/sass/components/_admin.sass
@@ -138,7 +138,7 @@
 // Insert styles here
 
 // Styles Workbench information message block
-.block-workbench
+// .block-workbench
 
 
 div.workbench-info-block
@@ -152,10 +152,6 @@ div.workbench-info-block
   border: solid 1px transparentize($col-content-strong, 0.5)
   background: transparentize($col-content-strong, 0.75)
   border-radius: 3px
-
-
-
-
 
 
 
@@ -280,4 +276,5 @@ tr.selected td
 
 body#tinymce p, pre
   font-size: $base-font-size * 1.2
+  margin-top: 0px
 
